--- a/src/Layout/Main/style.css
+++ b/src/Layout/Main/style.css
@@ -68,6 +68,32 @@ body {
     margin-top: 2rem;
 }
 
+.disable-select {
+    user-select: none; /* supported by Chrome and Opera */
+   -webkit-user-select: none; /* Safari */
+   -khtml-user-select: none; /* Konqueror HTML */
+   -moz-user-select: none; /* Firefox */
+   -ms-user-select: none; /* Internet Explorer/Edge */
+}
+
+.outline-none {
+    outline : none;
+}
+
+.searchInp {
+    transition: 0.3s
+}
+
+.searchInp:focus {
+    outline: none;
+    border-color: #FF512F;
+}
+
+.searchInp::placeholder {
+    color: rgb(0, 0, 0, 0.4)
+}
+
+
 @media screen and (max-width: 1600px) {
     .mtopqueries {
         margin-top: 1.5rem;
