--- a/src/Module/Profile/profile.css
+++ b/src/Module/Profile/profile.css
@@ -63,3 +63,10 @@
   .bm-overlay {
     background: rgba(0, 0, 0, 0.3);
   }
+
+  .bg-image {
+    background: rgba(0, 0, 0, 0.1);
+    width: 100%;
+    min-height: 2100px;
+    height: auto;
+  }
