--- a/src/Layout/Main/style.css
+++ b/src/Layout/Main/style.css
@@ -42,7 +42,14 @@ body {
     transition: 0.3s
 }
   
-  .NaisesButton:hover {
+.NaisesButton:hover {
+    text-decoration: none;
+    border: none;
+    background: #FF6F00;
+    color: white;
+}
+
+.NaisesButton-click {
     text-decoration: none;
     border: none;
     background: #FF6F00;
